--- a/login/index.html
+++ b/login/index.html
@@ -11,12 +11,15 @@
     <p id="loggedInStatus">You are logged out.</p>
     <button id="loginButton" disabled>Log in as Amy</button>
     <button id="logoutButton" disabled>Log out</button>
+    <button id="checkIsLoggedIn">Check Is Logged In</button>
 
     <script src="https://cdn.kustomerapp.com/chat-web/widget.js" data-kustomer-api-key='INSERT_API_KEY'></script>
     <script>
       const loggedInStatus = document.getElementById('loggedInStatus');
       const loginButton = document.getElementById('loginButton');
       const logoutButton = document.getElementById('logoutButton');
+      const checkIsLoggedInButton = document.getElementById('checkIsLoggedIn');
+      let email;
 
       Kustomer.start({}, function () {
         loginButton.disabled = false;
@@ -36,6 +39,7 @@
               loggedInStatus.innerText = 'You are logged in as Amy. Welcome back!';
               loginButton.disabled = true;
               logoutButton.disabled = false;
+              email = response.email;
             }
           });
         });
@@ -47,6 +51,15 @@
             loggedInStatus.innerText = 'You are logged out.';
             logoutButton.disabled = true;
             loginButton.disabled = false;
+          }
+        });
+      });
+
+      checkIsLoggedInButton.addEventListener('click', function() {
+        Kustomer.isLoggedIn({ email }, function(response, error) {
+          if (!error) {
+            const message = response ? 'logged in' : 'logged out'
+            loggedInStatus.innerText = 'Login check: ' + message;
           }
         });
       });
